DTSPB-1079 fix trust corp feature branch test issues after 2 merges (#1267)
* fix will lodgement e2e test

* allow for tests to be run on Windows

* fix encoding issue

* fix lint issues

* resolve docker-compose merge issue and add test entries for sol tests

* fix solicitor single executor gop e2e test

* fix multi-exec solicitor test for local (ccd) use

* revert config and add debug test entries