@@ -23,7 +23,9 @@ import javax.annotation.PostConstruct;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.util.regex.Pattern;
 
 @ContextConfiguration(classes = TestContextConfiguration.class)
 @Component
@@ -73,7 +75,8 @@ public class FunctionalTestUtils {
     public String getJsonFromFile(String fileName) {
         try {
             File file = ResourceUtils.getFile(this.getClass().getResource("/json/" + fileName));
-            return new String(Files.readAllBytes(file.toPath()));
+            String fileContent = new String(Files.readString(file.toPath(), StandardCharsets.UTF_8));
+            return fileContent;
         } catch (IOException e) {
             e.printStackTrace();
             return null;
